ParamHelpers_1.9:
- Many parameters can now be expressions which can be evaluated later while
  providing a lookup dictionary.
- make*Param now accepts special.vals which are always feasible
- getParamLengths, getLower, getUpper, getValues were made S3 to also work on normal Parameter objects
- new functions
-- evaluateParamExpressions
-- hasExpression

ParamHelpers_1.8:
- removed soobench from SUGGESTS and removed function extractParamSetFromSooFunction
- hasDiscrete: added arg "include.logical"
- getParamSet has become a generic
- OptPath: it is possible to log non-scalar values under "extras" now by
  starting the extra-name with a dot. These elements wll not be contained is
  as.data.frame(opt.path) when converted.
- make*Param argument 'requires' now accepts expressions and quote'd expressions.
- getParamIds is now S3 and also callable on type "Param"
- filterParams: has new arg "check.requires"
- isFeasible: new args "use.defaults" and "filter"
- trafoValue: slightly robustify arg handling
- new functions
-- isNumericStrict
-- getTypeStringsNumeric, getTypeStringsNumericStrict, getTypeStringsInteger, getTypeStringsDiscrete
-- filterParamsNumeric, filterParamsDiscrete
-- updateParVals

ParamHelpers_1.7:
- dfRowsToList, dfRowToList: added arg enforce.col.types
- UntypedParam also got the "tunable" flag

ParamHelpers_1.6:
- added new character parameter types, see new functions below
- added property 'tunable' to make*Param
- isFeasible supports named lists for unordered checks
- numeric and numericvector Params and LearnerParams have a new arg 'allow.inf'
- filterParams can now filter based on 'ids' and 'tunable'
- convertParamSetToIrace: removed argument 'digits' to keep maximum precision of boundaries
- added renderOptPathPlot and plotOptPath for plotting of optimization paths.
- added plotEAF and plotYTraces to compare singlecrit and bicrit optimization paths.
- new functions
-- isRequiresOk
-- plotEAF
-- plotYTraces
-- renderOptPathPlot, plotOptPath