@@ -99,6 +99,7 @@ export(getParamNr)
 export(getParamSet)
 export(getParamTypeCounts)
 export(getParamTypes)
+export(getRequirements)
 export(getTypeStringsDiscrete)
 export(getTypeStringsInteger)
 export(getTypeStringsNumeric)
